--- a/playbooks/roles/requirements.yml
+++ b/playbooks/roles/requirements.yml
@@ -2,6 +2,9 @@ collections:
   - name: ansible.posix
     version: '1.5.4'
 
+  - name: community.mysql
+    version: '3.9.0'
+
 roles:
   - name: geerlingguy.docker
     version: '7.1.0'
