--- a/playbooks/roles/top/tasks/mysql.yml
+++ b/playbooks/roles/top/tasks/mysql.yml
@@ -18,6 +18,6 @@
         project_src: /opt/mysql
         state: present
       environment:
-        MYSQL_USER: "{{ mysql_user }}"
-        MYSQL_PASSWORD: "{{ mysql_password }}"
-        MYSQL_ROOT_PASSWORD: "{{ mysql_root_password }}"
+        MYSQL_USER: "{{ top_mysql_user }}"
+        MYSQL_PASSWORD: "{{ top_mysql_password }}"
+        MYSQL_ROOT_PASSWORD: "{{ top_mysql_root_password }}"
