--- a/playbooks/host_vars/top/vars.yml
+++ b/playbooks/host_vars/top/vars.yml
@@ -1,10 +1,11 @@
 ansible_user_hash: "{{ vault_ansible_user_password | password_hash('sha512') }}"
 
-top_mysql_user: mysql
-top_mysql_password: "{{ vault_top_mysql_password }}"
 top_mysql_root_password: "{{ vault_top_mysql_root_password }}"
 
 top_minio_access_key: minio
 top_minio_secret_key: "{{ vault_top_minio_secret_key }}"
 
 top_redis_password: "{{ vault_top_redis_password }}"
+
+top_bigben_test_app_mysql_password: "{{ vault_top_bigben_test_app_mysql_password }}"
+top_bigben_test_migration_mysql_password: "{{ vault_top_bigben_test_migration_mysql_password }}"
